# -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([pdelay], [1.0.0], [kshin@aps.anl.gov])
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/pdelay.cc])

#AX_COMPILER_FLAGS
#AX_COMPILER_FLAGS_CFLAGS
#AX_COMPILER_FLAGS_CXXFLAGS
AX_COMPILER_VENDOR
AX_CXX_BOOL
AX_CXX_COMPILE_STDCXX_11
AX_CXX_DYNAMIC_CAST
AX_CXX_HAVE_NUMERIC_LIMITS
AX_CXX_HAVE_SSTREAM
AX_CXX_NAMESPACES
AX_CXX_NAMESPACE_STD
AX_CXX_STATIC_CAST
AX_BOOST_BASE([1.60.0],, [AC_MSG_ERROR([Need Boost >= 1.60.0!!!!])])
AX_BOOST_SYSTEM
AX_BOOST_IOSTREAMS
AX_BOOST_FILESYSTEM
#AX_OPENMP
AC_OPENMP
AX_CHECK_ZLIB
AX_LIB_SQLITE3([3.0.0],, [AC_MSG_ERROR([Cannot find system Sqlite3 library... Using bundled one.])])
AM_CONDITIONAL([USE_BUNDLED_SQLITE3], [test -z "$HAVE_SQLITE3"])

# Data size check
AC_CHECK_SIZEOF([char])
AC_CHECK_SIZEOF([short])
AC_CHECK_SIZEOF([int])
AC_CHECK_SIZEOF([unsigned])
AC_CHECK_SIZEOF([long])
AC_CHECK_SIZEOF([long long])
AC_CHECK_SIZEOF([uint64_t])
AC_CHECK_SIZEOF([int64_t])
AC_CHECK_SIZEOF([float])
AC_CHECK_SIZEOF([double])
AC_CHECK_SIZEOF([long double])

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_RANLIB
AM_PROG_AR


AC_OUTPUT(Makefile src/Makefile)
